@@ -1,29 +1,26 @@
 package no.gunbang.market.domain.market.repository;
 
-import static no.gunbang.market.common.QItem.item;
-import static no.gunbang.market.domain.market.entity.QMarket.market;
-import static no.gunbang.market.domain.user.entity.QUser.user;
-
 import com.querydsl.core.BooleanBuilder;
+import com.querydsl.core.types.Order;
+import com.querydsl.core.types.OrderSpecifier;
 import com.querydsl.core.types.dsl.CaseBuilder;
-import com.querydsl.jpa.JPAExpressions;
+import com.querydsl.core.types.dsl.Expressions;
 import com.querydsl.jpa.JPQLQuery;
+import com.querydsl.jpa.impl.JPAQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import lombok.RequiredArgsConstructor;
+import no.gunbang.market.common.QItem;
 import no.gunbang.market.common.Status;
 import no.gunbang.market.domain.market.dto.MarketHistoryResponseDto;
 import no.gunbang.market.domain.market.dto.MarketListResponseDto;
-import no.gunbang.market.domain.market.dto.MarketResponseDto;
 import no.gunbang.market.domain.market.dto.QMarketHistoryResponseDto;
 import no.gunbang.market.domain.market.dto.QMarketListResponseDto;
-import no.gunbang.market.domain.market.dto.QMarketResponseDto;
 import no.gunbang.market.domain.market.entity.QMarket;
 import no.gunbang.market.domain.market.entity.QTrade;
-import no.gunbang.market.domain.user.dto.QUserResponseDto;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Repository;
@@ -60,11 +57,10 @@ public class MarketRepositoryImpl implements MarketRepositoryCustom {
             .where(market.user.id.eq(userId).or(trade.user.id.eq(userId)))
             .orderBy(market.id.asc(), trade.createdAt.coalesce(market.createdAt).desc())
             .fetch();
-
     }
 
     @Override
-    public Page<MarketListResponseDto> findPopularTradeItems(LocalDateTime startDate, Pageable pageable) {
+    public Page<MarketListResponseDto> findPopularMarketItems(LocalDateTime startDate, Pageable pageable) {
         QTrade trade = QTrade.trade;
         QMarket market = QMarket.market;
 
@@ -87,52 +83,52 @@ public class MarketRepositoryImpl implements MarketRepositoryCustom {
     }
 
     @Override
-    public Page<MarketResponseDto> findAllMarkets(String name, Pageable pageable) {
+    public Page<MarketListResponseDto> findAllMarketItems(String searchKeyword, String sortBy, String sortDirection, Pageable pageable) {
+        QMarket market = QMarket.market;
+        QTrade trade = QTrade.trade;
+        QItem item = QItem.item;
 
-
-        // name 동적 쿼리
-        BooleanBuilder conditions = new BooleanBuilder();
-        conditions.and(market.status.eq(Status.ON_SALE));
-        if (name != null && !name.trim().isEmpty()) {
-            conditions.and(market.item.name.contains(name));
+        BooleanBuilder builder = new BooleanBuilder();
+        if (searchKeyword != null && !searchKeyword.isBlank()) {
+            builder.and(item.name.containsIgnoreCase(searchKeyword));
         }
 
-        // 최소 가격 구하는 서브 쿼리 추가
-        QMarket marketSub = new QMarket("marketSub");
-        JPQLQuery<Long> minPriceQuery = JPAExpressions
-            .select(marketSub.price.min())
-            .from(marketSub)
-            .where(
-                marketSub.item.id.eq(market.item.id)
-                    .and(marketSub.status.eq(Status.ON_SALE))
-            );
-
-        // 각 아이템 별로 최저가 MarketResponseDto 생성
-        List<MarketResponseDto> markets = queryFactory
-            .select(new QMarketResponseDto(
-                market.id,
-                market.amount,
-                market.price,
-                market.status,
-                market.user.nickname,
+        JPQLQuery<MarketListResponseDto> query = queryFactory
+            .select(new QMarketListResponseDto(
                 market.item.id,
-                market.item.name
+                market.item.name,
+                market.amount.subtract(trade.amount.sum().coalesce(0)),
+                market.price.min().coalesce(0L),
+                trade.id.count().coalesce(0L)
             ))
             .from(market)
-            .join(market.user, user)
-            .join(market.item, item)
-            .where(conditions.and(market.price.eq(minPriceQuery)))
-            .orderBy(market.item.id.asc())
+            .leftJoin(trade).on(market.id.eq(trade.market.id))
+            .leftJoin(item).on(market.item.id.eq(item.id))
+            .where(builder)
+            .groupBy(market.id, market.item.id, market.item.name, market.amount, market.price)
+            .orderBy(determineSorting(sortBy, sortDirection, market, trade))
             .offset(pageable.getOffset())
-            .limit(pageable.getPageSize())
-            .fetch();
+            .limit(pageable.getPageSize());
 
-        Long total = queryFactory
-            .select(market.item.id.countDistinct())
-            .from(market)
-            .where(conditions.and(market.price.eq(minPriceQuery)))
-            .fetchOne();
+        return PageableExecutionUtils.getPage(query.fetch(), pageable, () -> {
+            JPAQuery<Long> countQuery = queryFactory
+                .select(market.item.id.countDistinct())
+                .from(market)
+                .leftJoin(trade).on(market.id.eq(trade.market.id))
+                .leftJoin(item).on(market.item.id.eq(item.id))
+                .where(builder);
 
-        return new PageImpl<>(markets, pageable, total == null ? 0 : total);
+            return Optional.ofNullable(countQuery.fetchOne()).orElse(0L);
+        });
+    }
+
+    private OrderSpecifier<?> determineSorting(String sortBy, String sortDirection, QMarket market, QTrade trade) {
+        Order order = "DESC".equalsIgnoreCase(sortDirection) ? Order.DESC : Order.ASC;
+        return switch (sortBy) {
+            case "itemName" -> new OrderSpecifier<>(order, market.item.name);
+            case "price" -> new OrderSpecifier<>(order, market.price.min());
+            case "amount" -> new OrderSpecifier<>(order, trade.amount.sum());
+            default -> new OrderSpecifier<>(Order.ASC, Expressions.numberTemplate(Long.class, "RAND()"));
+        };
     }
 }
